fix(NGINX): routes + menu
- serve dashboard at /dashboard in prod
- default route / temporarily serves profile
- menu stats instead of profile
- navbar avatar redirects to /me on click

srcs/nginx/Dockerfile
srcs/nginx/conf.d/default.conf
srcs/nginx/src/App.tsx
srcs/nginx/src/components/atoms/MenuElement.tsx
srcs/nginx/src/components/molecules/NavBar.tsx
srcs/nginx/src/locales/en/common.json
srcs/nginx/src/locales/fr/common.json
srcs/nginx/src/pages/ProfilePage.tsx
srcs/nginx/src/types/react-types.ts
srcs/nginx/tsconfig.json
srcs/users/tsconfig.json

--- a/srcs/nginx/src/locales/fr/common.json
+++ b/srcs/nginx/src/locales/fr/common.json
@@ -4,7 +4,7 @@
     "home": "Accueil",
     "about": "A propos",
     "play": "Jouer",
-    "profile": "Profil"
+    "stats": "Stats"
   },
   "footer": {
     "copyright": "© 2026 Tous droits réservés.",
