--- a/srcs/nginx/src/locales/en/common.json
+++ b/srcs/nginx/src/locales/en/common.json
@@ -4,7 +4,7 @@
     "home": "Home",
     "about": "About",
     "play": "Play",
-    "profile": "Profile"
+    "stats": "Stats"
   },
   "footer": {
     "copyright": "© 2026 . All rights reserved.",
