feat(NGINX): change language + adapt Navbar
- link Locale with i118n
- adapt Navbar with profile menu

--- a/srcs/nginx/src/locales/en/common.json
+++ b/srcs/nginx/src/locales/en/common.json
@@ -21,7 +21,8 @@
     "home": "Home",
     "about": "About",
     "play": "Play",
-    "stats": "Stats"
+    "stats": "Stats",
+    "profile": "Profile"
   },
   "footer": {
     "copyright": "© 2026 . All rights reserved.",
