--- a/srcs/nginx/src/locales/fr/common.json
+++ b/srcs/nginx/src/locales/fr/common.json
@@ -21,7 +21,8 @@
     "home": "Accueil",
     "about": "A propos",
     "play": "Jouer",
-    "stats": "Stats"
+    "stats": "Stats",
+    "profile": "Profil"
   },
   "footer": {
     "copyright": "© 2026 Tous droits réservés.",
