feat(front): Add component FriendsList
update: checking the translation of all the componets i did
checking css layout ans style
next: Integrate components into navigation logic

package-lock.json
srcs/nginx/src/api/auth-api.ts
srcs/nginx/src/components/atoms/CircleButton.tsx
srcs/nginx/src/components/atoms/MatchNode.tsx
srcs/nginx/src/components/atoms/PlayerCapsule.tsx
srcs/nginx/src/components/atoms/TournamentList.tsx
srcs/nginx/src/components/molecules/FriendsList.tsx
srcs/nginx/src/components/molecules/TournamentBracket.tsx
srcs/nginx/src/locales/en/common.json
srcs/nginx/src/locales/fr/common.json
srcs/nginx/src/locales/tf/common.json
srcs/nginx/src/pages/TournamentPage.tsx
srcs/nginx/src/types/types.ts

--- a/srcs/nginx/src/locales/en/common.json
+++ b/srcs/nginx/src/locales/en/common.json
@@ -85,6 +85,8 @@
     "no_tournament": "No tournament",
     "final": "Final",
     "semi_final": "Semi-Final",
-    "start": "Start"
+    "little_final": "Little-Finale",
+    "start": "Start",
+    "friends": "Friends"
   }
 }
