feat(NGINX): connection api /users?query
- new endpoint GET /users?query
- consumption by UserSearchContainer

--- a/srcs/nginx/src/locales/fr/common.json
+++ b/srcs/nginx/src/locales/fr/common.json
@@ -17,6 +17,10 @@
   "form": {
     "processing": "traitement..."
   },
+  "search": {
+    "no_results": "no results",
+    "user": "Search for a user"
+  },
   "global": {
     "loading": "Chargement...",
     "not_found": "Non trouvé",
