--- a/srcs/nginx/src/locales/en/common.json
+++ b/srcs/nginx/src/locales/en/common.json
@@ -17,6 +17,10 @@
   "form": {
     "processing": "processing..."
   },
+  "search": {
+    "no_results": "no results",
+    "user": "Search for a user"
+  },
   "global": {
     "loading": "Loading...",
     "not_found": "Not found",
