fix(NGINX): handle 409 + fix eslint

--- a/srcs/nginx/src/locales/en/common.json
+++ b/srcs/nginx/src/locales/en/common.json
@@ -43,7 +43,8 @@
     "mfa_required": "Multi-factor authentication required. Please set up or enter your MFA code",
     "invalid_mfa_code": "Invalid MFA code. Please check the code and try again",
     "internal_error": "Internal server error. Please try again later.",
-    "friend_self_add": "You cannot add yourself as a friend"
+    "friend_self_add": "You cannot add yourself as a friend",
+    "friend_already": "You are already friends"
   },
   "navbar": {
     "home": "Home",
