feat(front): améliorer la gestion des erreurs et la logique de connexion OAuth

--- a/srcs/nginx/src/locales/en/common.json
+++ b/srcs/nginx/src/locales/en/common.json
@@ -76,11 +76,14 @@
     "checking": "Checking authentication...",
     "success_title": "Login successful!",
     "success_redirect": "Redirecting...",
+    "success_new_user": "Account created with {{provider}}! Welcome!",
+    "success_login": "Logged in with {{provider}}!",
     "error_title": "Login failed",
     "retry": "Try again",
-    "back_home": "Back to home",
+    "back_home": "Back to login",
     "error_invalid_provider": "Invalid OAuth provider: {{provider}}",
     "error_missing_code": "Authorization code missing",
+    "error_state_mismatch": "Security verification failed. Please try again.",
     "error_config": "OAuth configuration missing for {{provider}}. Contact the administrator.",
     "error_generic": "Error during {{provider}} login. Please try again."
   },
