--- a/srcs/nginx/src/locales/fr/common.json
+++ b/srcs/nginx/src/locales/fr/common.json
@@ -76,11 +76,14 @@
     "checking": "Vérification de l'authentification...",
     "success_title": "Connexion réussie !",
     "success_redirect": "Redirection automatique en cours...",
+    "success_new_user": "Compte créé avec {{provider}} ! Bienvenue !",
+    "success_login": "Connecté avec {{provider}} !",
     "error_title": "Connexion échouée",
     "retry": "Réessayer",
-    "back_home": "Retour à l'accueil",
+    "back_home": "Retour à la connexion",
     "error_invalid_provider": "Provider OAuth invalide : {{provider}}",
     "error_missing_code": "Code d'autorisation manquant",
+    "error_state_mismatch": "Vérification de sécurité échouée. Veuillez réessayer.",
     "error_config": "Configuration manquante pour {{provider}}. Contactez l'administrateur.",
     "error_generic": "Erreur lors de la connexion {{provider}}. Veuillez réessayer."
   },
