--- a/srcs/nginx/src/locales/tf/common.json
+++ b/srcs/nginx/src/locales/tf/common.json
@@ -76,11 +76,14 @@
     "checking": "On vérifie que t'es bien qui tu prétends être...",
     "success_title": "Bienvenue dans la place !",
     "success_redirect": "On t'emmène vers le bercail...",
-    "error_title": "Pas de bol, ça a foiré",
+    "success_new_user": "Compte créé chez {{provider}} ! T'es des nôtres maintenant.",
+    "success_login": "On t'a reconnu chez {{provider}} ! Rentre.",
+    "error_title": "Pas de bol, ça a foié",
     "retry": "Retenter le coup",
-    "back_home": "Retour au bercail",
+    "back_home": "Retour à la connexion",
     "error_invalid_provider": "On connaît pas ce provider-là : {{provider}}",
     "error_missing_code": "Le code d'autorisation s'est fait la malle",
+    "error_state_mismatch": "Vérification sécurité ratée. Quelqu'un essaie de te piquer la place ?",
     "error_config": "La config pour {{provider}} est aux abonnés absents. Appelle le grand chef.",
     "error_generic": "Ça a merdé avec {{provider}}. Retente ta chance."
   },
