feat(auth_front): add auth avec check fix(auth_error): améliorer le traitement des erreurs zod refactor(WelcomeHalo): simplifier la gestion des classes CSS et des états refactor(WelcomeInput): ajouter la possibilité d'afficher/masquer le mot de passe

--- a/srcs/nginx/src/locales/en/common.json
+++ b/srcs/nginx/src/locales/en/common.json
@@ -48,6 +48,19 @@
     "too_small": "A longer value is required",
     "too_big": "A shorter value is required"
   },
+  "validation": {
+    "password": {
+      "minLength": "At least 8 characters",
+      "lowercase": "One lowercase letter (a-z)",
+      "uppercase": "One uppercase letter (A-Z)",
+      "number": "One digit (0-9)",
+      "special": "One special character (!@#$%^&*)"
+    },
+    "username": {
+      "minLength": "4 to 20 characters",
+      "alphanumeric": "Letters, numbers and _ only"
+    }
+  },
   "errors": {
     "validation_mandatory": "This field is mandatory.",
     "validation_error": "Invalid format. Please check the submitted fields and try again.",
