--- a/srcs/nginx/src/locales/fr/common.json
+++ b/srcs/nginx/src/locales/fr/common.json
@@ -48,6 +48,19 @@
     "too_small": "La valeur doit être plus longue",
     "too_big": "La valeur doit être plus courte"
   },
+  "validation": {
+    "password": {
+      "minLength": "Au moins 8 caractères",
+      "lowercase": "Une minuscule (a-z)",
+      "uppercase": "Une majuscule (A-Z)",
+      "number": "Un chiffre (0-9)",
+      "special": "Un caractère spécial (!@#$%^&*)"
+    },
+    "username": {
+      "minLength": "4 à 20 caractères",
+      "alphanumeric": "Lettres, chiffres et _ uniquement"
+    }
+  },
   "errors": {
     "validation_mandatory": "Ce champ est obligatoire.",
     "validation_error": "Format invalide. Veuillez vérifier les champs soumis et réessayer.",
